# CSCI-Capstone

./: .gitignore  App.js  HomeScreen.js  ProfileScreen.js  README.md  RandomScreen.js  index.js  mongodb stuff.md  package-lock.json  package.json
backend/: .env  README.md  firebase.js  package-lock.json  package.json  pyproject.toml  server.js  server.py
backend/static/: styles.css
backend/templates/: index.html
frontend/: App.js  FollowerProfile.js  HomeScreen.js  LoginScreen.js  PlaylistDetails.js  ProfileScreen.js  SearchScreen.js  SongSelector.js  app.json
frontend/Screens/: ProfileScreen.js  RandomScreen.js  SettingsScreen.js
