[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sarah <vanwars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.0"
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"